# 01_Bayesian-Linear-Regression_MCMC

./: README.md  main.py  pyproject.toml  red_wine_quality.ipynb
notebooks/: 01_eda.ipynb  02_baseline_linear_regression.ipynb  03_bayesian_linear_regression.ipynb
