[project]
name = "01-bayesian-linear-regression-mcmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pymc>=5.28.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
